exemplo como plugin "presença" em versão inicial

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       start_period: 10s
 
   moodle:
+    # image: 'ctezlifrn/moodle:3.11.10-php7.4-002'
     image: 'ctezlifrn/moodle:4.0.4-php8.0-002'
     # restart: always
     ports:
@@ -28,6 +29,7 @@ services:
     volumes:
       # Plugins
       # - './src/php/moodle__block_newblock:/var/www/html/blocks/newblock'
+      - './src/php/moodle__block_presenca:/var/www/html/blocks/presenca'
 
       # Data
       - './volumes/moodledata:/var/moodledata'
